--- a/src/styles/question.scss
+++ b/src/styles/question.scss
@@ -7,7 +7,20 @@
   & + .question {
     margin-top: 8px;
   }
-
+  
+  &.highlighted {
+    background: #F4F8FF;
+    border: 1px solid #835AFD;
+    
+    footer .user-info span {
+      color: #29292E;
+    }
+  }
+  
+  &.answered {
+    background: #D8DCDD;;
+  }
+  
   p {
     color: #29292E;
   }
@@ -22,7 +35,7 @@
     .user-info {
       display: flex;
       align-items: center;
-      
+
       img {
         width: 32px;
         height: 32px;
@@ -34,6 +47,11 @@
         color: #737380;
         font-size: 14px;
       }
+    }
+
+    > div {
+      display: flex;
+      gap: 16px;
     }
 
     button {
